[package]
name = "stm32_i2s_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m-rtic = "1.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7"
heapless = "0.7"

[dependencies.stm32f4xx-hal]
path= '../stm32f4xx-hal'
features = ["stm32f411", "i2s"]
